@@ -1,5 +1,9 @@
 This file documents the revision history for mod_gearman.
 
+next:
+          - reintroduce result_workers option because it is required to disabled result workers
+            but maximum is now one result worker.
+
 2.1.4 Fri Aug 28 15:58:55 CEST 2015
           - add perfdata=all option to override local process_performance_data setting
           - add check_interval to performance data
